--- a/README
+++ b/README
@@ -192,8 +192,8 @@ Build and execution instructions:
   denied by the application server.
 
 ---------------------------------------------
-  Tomcat 4 or Tomcat 5 servlet engine
-  -----------------------------------
+  Tomcat servlet engine
+  ---------------------
 
   It is assumed that tomcat is already installed in some directory,
   for example in /opt/tomcat4.  The environment variable CATALINA_HOME
@@ -230,10 +230,12 @@ Build and execution instructions:
   Sample settings for Apache/Tomcat
   ---------------------------------
 
-  Assuming that tomcat is installed in /opt/tomcat5, JavaBridge.war is
-  deployed in /opt/tomcat5/webapps, java.so (or php_java.dll) is
-  installed in the php modules directory, mod_jk and php5 are installed
-  in the apache modules directory, we recommend following settings:
+  Assuming that tomcat is installed (e.g. in /opt/tomcat5),
+  JavaBridge.war is deployed (e.g. in /opt/tomcat5/webapps), java.so
+  (or php_java.dll) is installed in the php modules directory (e.g. in
+  /usr/lib/php4/), mod_jk and php5 are installed in the apache modules
+  directory (e.g. in /usr/lib/httpd/modules/), we recommend following
+  settings:
 
 
   The following settings in httpd.conf direct all .jsp requests to the
@@ -261,65 +263,9 @@ Build and execution instructions:
     java.hosts     = "127.0.0.1:8080"
     java.servlet   = On
 
----------------------------------------------
-  AS or Tomcat w/o Apache
-  -----------------------
+  To check the above settings, please visit http://localhost/JavaBridge/
+  and run the sessionSharing.jsp and sessionSharing.php examples.
 
-  Read the following instructions only if you don't want to use
-  Apache.
-
-  It is possible to run PHP inside java. Unlike the JSR223 sample
-  implementation, which uses the JNI interface to load/call the native
-  php5 shared library, we use the CGI interface to call the PHP
-  binary and use a local channel to connect the two components. This is
-  not much slower[1] but more reliable. In case a PHP instance crashes,
-  it will not take down the whole servlet engine or application server.
-  
-  Please follow the AS or Tomcat installation instructions above, then
-  visit http://localhost:8080/JavaBridge and run the supplied JSP and PHP
-  examples.
-
-  In case the PHP binary could not be found, please adjust the
-  php_exec (see JavaBridge/WEB-INF/web.xml) setting, for example:
-
-      <param-name>php_exec</param-name>
-      <param-value>/usr/local/bin/php</param-value>
-
-  or
-
-      <param-name>php_exec</param-name>
-      <param-value>c:/PHP/php-cgi.exe</param-value>
-
-  You can also copy your php executable to the JavaBridge/WEB-INF/cgi
-  folder, please read the file JavaBridge/WEB-INF/cgi/README for
-  details.
-
-  In case your application server denies calling the CGI binary, add a
-  policy to the JavaBridge.war which allows execution of PHP. This is
-  AS specific. However, for a first test, switch off security checking
-  in general by adding the following to the application server's JRE
-  "java.policy" file:
-
-    grant {
-	permission java.security.AllPermission;
-    };
-
-
-  Running PHP as an apache plugin is more efficient than calling a CGI
-  binary from tomcat. Please use the tomcat mod_jk adapter to connect
-  tomcat with apache. That way PHP is managed by the apache pool, JSP
-  files are forwarded via the mod_jk adapter and PHP/Java calls via the
-  PHP/Java bridge.
-
-[1] total execution time for 10 queries for examples/bench/bench.php,
- RHEL3 (AMD32, 1500mhz) 
- Tomcat 4.0 
- PHP 5.0.1 (from the jsr sample)
- PHP/Java Bridge 2.0.8
- jsr223 sample implemenentation (from 25.07.2005):
-
-jsr223: 2m58.769s 
-bridge: 2m59.343s
 ------------------------------------
   64 Bit issues
   -------------
@@ -401,6 +347,65 @@ bridge: 2m59.343s
 
     java.socketname=9268
 
+---------------------------------------------
+  AS/Servlet with PHP CGI
+  -----------------------
+
+  Read the following instructions only if you don't want to use
+  Apache.
+
+  It is possible to run PHP inside java. Unlike the JSR223 sample
+  implementation, which uses the JNI interface to load/call the native
+  php5 shared library, we use the CGI interface to call the PHP
+  binary and use a local channel to connect the two components. This is
+  not much slower[1] but more reliable. In case a PHP instance crashes,
+  it will not take down the whole servlet engine or application server.
+  
+  Please follow the AS or Tomcat installation instructions above, then
+  visit http://localhost:8080/JavaBridge and run the supplied JSP and PHP
+  examples.
+
+  In case the PHP binary could not be found, please adjust the
+  php_exec (see JavaBridge/WEB-INF/web.xml) setting, for example:
+
+      <param-name>php_exec</param-name>
+      <param-value>/usr/local/bin/php</param-value>
+
+  or
+
+      <param-name>php_exec</param-name>
+      <param-value>c:/PHP/php-cgi.exe</param-value>
+
+  You can also copy your php executable to the JavaBridge/WEB-INF/cgi
+  folder, please read the file JavaBridge/WEB-INF/cgi/README for
+  details.
+
+  In case your application server denies calling the CGI binary, add a
+  policy to the JavaBridge.war which allows execution of PHP. This is
+  AS specific. However, for a first test, switch off security checking
+  in general by adding the following to the application server's JRE
+  "java.policy" file:
+
+    grant {
+	permission java.security.AllPermission;
+    };
+
+
+  Running PHP as an apache plugin is more efficient than calling a CGI
+  binary from tomcat. Please use the tomcat mod_jk adapter to connect
+  tomcat with apache. That way PHP is managed by the apache pool, JSP
+  files are forwarded via the mod_jk adapter and PHP/Java calls via the
+  PHP/Java bridge.
+
+[1] total execution time for 10 queries for examples/bench/bench.php,
+ RHEL3 (AMD32, 1500mhz) 
+ Tomcat 4.0 
+ PHP 5.0.1 (from the jsr sample)
+ PHP/Java Bridge 2.0.8
+ jsr223 sample implemenentation (from 25.07.2005):
+
+jsr223: 2m58.769s 
+bridge: 2m59.343s
 ------------------------------------
   Loading on-demand with dl()
   ---------------------------
